--- a/detailpages/detailpage_exposure.html
+++ b/detailpages/detailpage_exposure.html
@@ -59,16 +59,16 @@
                                         <nav>
                                             <ul class="sub-menu">
                                                 <li>
-                                                    <a class="link" href="index.html#about_us">About us/ team</a>
+                                                    <a class="link" href="../index.html#about_us">About us/ team</a>
                                                 </li>
                                                 <li>
-                                                    <a  href="diensten.html">Services/ approach</a>
+                                                    <a  href="../diensten.html">Services/ approach</a>
                                                 </li>
                                                 <li>
-                                                    <a class="link" href="portfolio.html">Portfolio</a></li>
+                                                    <a class="link" href="../portfolio.html">Portfolio</a></li>
                                                 <li>
-                                                    <a class="link" href="jobs.html">Jobs</a></li>
-                                                <li><a class="link" href="contact.html">Contact</a></li>
+                                                    <a class="link" href="../jobs.html">Jobs</a></li>
+                                                <li><a class="link" href="../contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </span>
@@ -100,7 +100,7 @@
                     sf-grid__offset-lg-1 
                     sf-grid__column-lg-4
                     ">
-                        <h2>Background</h2>
+                        <h2>Background double exposure</h2>
                         <p>Voor een klant van ons werd gevraagd een background te maken voor zijn gloednieuwe macbook 
 </p>
 
