--- a/detailpages/detailpage_feestdagen.html
+++ b/detailpages/detailpage_feestdagen.html
@@ -59,16 +59,16 @@
                                         <nav>
                                             <ul class="sub-menu">
                                                 <li>
-                                                    <a class="link" href="index.html#about_us">About us/ team</a>
+                                                    <a class="link" href="../index.html#about_us">About us/ team</a>
                                                 </li>
                                                 <li>
-                                                    <a  href="diensten.html">Services/ approach</a>
+                                                    <a  href="../diensten.html">Services/ approach</a>
                                                 </li>
                                                 <li>
-                                                    <a class="link" href="portfolio.html">Portfolio</a></li>
+                                                    <a class="link" href="../portfolio.html">Portfolio</a></li>
                                                 <li>
-                                                    <a class="link" href="jobs.html">Jobs</a></li>
-                                                <li><a class="link" href="contact.html">Contact</a></li>
+                                                    <a class="link" href="../jobs.html">Jobs</a></li>
+                                                <li><a class="link" href="../contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </span>
