adding copyright sign on my portfolio work

--- a/detailpages/detailpage_cd.html
+++ b/detailpages/detailpage_cd.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Cd Cover eco werkt </h2>
                         <p>Voor een campagne van de vlaamse overheid werd gevraagd een cd hoes te ontwerpen. 
+                        <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
