--- a/detailpages/detailpage_epub.html
+++ b/detailpages/detailpage_epub.html
@@ -102,7 +102,7 @@
                     ">
                         <h2>Epub ekocycle</h2>
                         <p>Voor het merk ekocycle werd ons gevraagd een digitaal tijdschrift te maken. Dit werd het resultaat.
-                        Ekocycle is een samenwerking tussen will.i.am en coca cola, het merk specialiseert zich vooral op het maken van producten met de gerecyclede coca cola dopjes 
+                        Ekocycle is een samenwerking tussen will.i.am en coca cola, het merk specialiseert zich vooral op het maken van producten met de gerecyclede coca cola dopjes <br><br> &copy; Arne Wambeke
 </p>
 
                 </div>
