--- a/detailpages/detailpage_exposure.html
+++ b/detailpages/detailpage_exposure.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Background double exposure</h2>
                         <p>Voor een klant van ons werd gevraagd een background te maken voor zijn gloednieuwe macbook 
+                        <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
