--- a/detailpages/detailpage_feestdagen.html
+++ b/detailpages/detailpage_feestdagen.html
@@ -104,6 +104,8 @@
                         <p>Voor dehlaize ontwierpen we naar aanleiding van de feestdagen de brochure 
 Duurzame feestdagen verassende suggesties.
 Deze was gevuld met tips voor zo goedkoop mogelijk en tegelijk zo fancy mogelijk de feestdagen door te komen. 
+  <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
