--- a/detailpages/detailpage_flow.html
+++ b/detailpages/detailpage_flow.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Flow</h2>
                         <p>Hier werd een speciale bijlage gemaakt voor het tijdschrift flow 
+                          <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
