--- a/detailpages/detailpage_pub.html
+++ b/detailpages/detailpage_pub.html
@@ -101,7 +101,9 @@
                     sf-grid__column-lg-4
                     ">
                         <h2>Mountainpub</h2>
-                        <p>Een nieuwe bar in het hartje van antwerpen vroeg ons hun logo te ontwerpen 
+                        <p>Een nieuwe bar in het hartje van antwerpen vroeg ons hun logo te ontwerpen
+                          <br><br>
+                         &copy; Arne Wambeke 
 </p>
 
                 </div>
