--- a/detailpages/detailpage_spirit.html
+++ b/detailpages/detailpage_spirit.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Spirit triangle</h2>
                         <p>De organisatie van Spirit triangle een belgisch festival gevestigd in Italie aan het gardameer vroeg ons hun affiche te ontwerpen.
+                          <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
