--- a/detailpages/detailpage_starsky.html
+++ b/detailpages/detailpage_starsky.html
@@ -101,7 +101,9 @@
                     sf-grid__column-lg-4
                     ">
                         <h2>Starsky</h2>
-                        <p>Dit cool design is te verkrijgen op redbubble als stickers.  
+                        <p>Dit cool design is te verkrijgen op redbubble als stickers. 
+                          <br><br>
+                         &copy; Arne Wambeke 
 </p>
 
                 </div>
