--- a/detailpages/detailpage_waelkens.html
+++ b/detailpages/detailpage_waelkens.html
@@ -101,7 +101,9 @@
                     sf-grid__column-lg-4
                     ">
                         <h2>Banner Waelkens</h2>
-                        <p>In de zomer van 2016 waren het de olympische spelen, onze klant Waelkens vlaggen wou een zomerse banner die weergaf dat ze supporterden voor België  
+                        <p>In de zomer van 2016 waren het de olympische spelen, onze klant Waelkens vlaggen wou een zomerse banner die weergaf dat ze supporterden voor België.
+                          <br><br>
+                         &copy; Arne Wambeke 
 </p>
 
                 </div>
