--- a/detailpages/detailpage_balaton.html
+++ b/detailpages/detailpage_balaton.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Balaton Lake</h2>
                         <p>Deze foto van het Balaton Meer werd genomen tijdens Balaton sound 2016
+                        <br><br>
+                        &copy; Arne Wambeke
 </p>
 
                 </div>
