--- a/detailpages/detailpage_jewel.html
+++ b/detailpages/detailpage_jewel.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Banner juwelen winkel</h2>
                         <p>Voor een juwelierszaak in roeselare werd ons gevraagd een banner te ontwerpen voor aan de gevel van hun gebouw. 
+                          <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
