--- a/detailpages/detailpage_penguin.html
+++ b/detailpages/detailpage_penguin.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Penguin on Saturn</h2>
                         <p>De zoo van antwerpen vroeg ons deze poster te ontwerpen, voor hun nieuwe penguins te promoten 
+                          <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
