--- a/detailpages/detailpage_shimy_girl.html
+++ b/detailpages/detailpage_shimy_girl.html
@@ -102,6 +102,8 @@
                     ">
                         <h2>Background</h2>
                         <p>Voor een klant van ons werd gevraagd een background te maken voor zijn gloednieuwe iphone 
+                          <br><br>
+                         &copy; Arne Wambeke
 </p>
 
                 </div>
