--- a/detailpages/detailpage_epub.html
+++ b/detailpages/detailpage_epub.html
@@ -48,7 +48,7 @@
                <div class="navigation">
                             
                             <div class="left">
-                                <a href="index.html"><img class="logo" src="../assets/images/bubble.svg"></a>
+                                <a href="../index.html"><img class="logo" src="../assets/images/bubble.svg"></a>
                             </div>
                             
                             <div class="right">
