--- a/contact.html
+++ b/contact.html
@@ -155,5 +155,7 @@
     <script src="js/hamburger-min.js"></script>
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
 	<script async src="js/headroom-min.js"></script>
+		<script async src="js/google_analytic"></script>
+
 	</body>
 </html>
