--- a/index.html
+++ b/index.html
@@ -222,5 +222,7 @@
 	
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
 	<script async src="js/headroom-min.js"></script>
+		<script async src="js/google_analytic"></script>
+
 </body>
 </html>
