--- a/diensten.html
+++ b/diensten.html
@@ -294,7 +294,7 @@
 	
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
 	<script async src="js/headroom-min.js"></script>
-		<script async src="js/google_analytic"></script>
+		<script async src="js/google_analytic.js"></script>
 
 </body>
 </html>
