adding a footer note

--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
 				</div>
 			</div>
 			<footer class="sf-grid__column-12">
-					<div class=" 
-					sf-grid__offset-xsm-0 sf-grid__column-xsm-9 sf-grid__offset-sm-2 sf-grid__column-sm-8 sf-grid__column-md-2">
+					<div class=" sf-grid__offset-xsm-0 sf-grid__column-xsm-9 sf-grid__offset-sm-2 sf-grid__column-sm-8 sf-grid__column-md-2">
 						<p class="white adress">
 							Bubble BVBA<br>
 							Brugsesteenweg 400<br>
@@ -198,19 +197,20 @@
 							bubble@bubble.be<br>
 						</p>
 					</div>
-					<div class=" socialmedia
-					sf-grid__offset-xsm-1 sf-grid__column-xsm-1 sf-grid__offset-sm-1 sf-grid__column-sm-1 sf-grid__column-md-2 sf-grid__column-lg-1 sf-grid__column-xlg-1">
+					<div class=" socialmedia sf-grid__offset-xsm-1 sf-grid__column-xsm-1 sf-grid__offset-sm-1 sf-grid__column-sm-1 sf-grid__column-md-2 sf-grid__column-lg-1 sf-grid__column-xlg-1">
 						<div class="socialmedia">
 							<a class="icon" href="https://www.facebook.com/bubblecreativea/" target="blank"><i class="zmdi zmdi-facebook-box white"></i></a> <a class="icon" href="https://twitter.com/ArneWambeke1" target="blank"><i class="zmdi zmdi-twitter-box white"></i></a> <a class="icon" href="https://www.instagram.com/arnewmbk/" target="blank"><i class="zmdi zmdi-instagram white"></i></a>
 						</div>
 					</div>
 					<div class="newsletter sf-grid__offset-xsm-1 sf-grid__column-xsm-12 sf-grid__offset-sm-1 sf-grid__column-sm-12 sf-grid__column-md-2 sf-grid__offset-lg-1 sf-grid__column-lg-1 sf-grid__column-xlg-1">
-					<div id="input"></div>
+						<div id="input"></div>
 						<p>
 							Newsletter
 						</p><input class="textField" placeholder="email" type="text"><br>
 						<button id="reset">Subscribe</button>
 					</div>
+					<div class="sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-2 sf-grid__column-md-8 sf-grid__offset-lg-2 sf-grid__column-lg-8 sf-grid__offset-xlg-2 sf-grid__column-xlg-8">
+						<p class="footernote">Deze website werd gemaakt binnen een schoolomgeving en heeft geen enkel commercieel doel © Arne Wambeke </p>
 					</div>
 				</footer>
 		</div>
