--- a/portfolio.html
+++ b/portfolio.html
@@ -237,6 +237,9 @@
 						</p><input class="textField" placeholder="email" type="text"><br>
 						<button id="reset">Subscribe</button>
 					</div>
+					<div class="sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-2 sf-grid__column-md-8 sf-grid__offset-lg-2 sf-grid__column-lg-8 sf-grid__offset-xlg-2 sf-grid__column-xlg-8">
+						<p class="footernote">Deze website werd gemaakt binnen een schoolomgeving en heeft geen enkel commercieel doel © Arne Wambeke </p>
+					</div>
 				</footer>
 			</div>
 		</div>
