--- a/jobs.html
+++ b/jobs.html
@@ -181,7 +181,7 @@
 						<div id="input"></div>
 						<p>
 							Newsletter
-						</p><input class="textField" placeholder="email" type="text"><br>
+						</p><input class="textField" placeholder="Email" type="text"><br>
 						<button id="reset">Subscribe</button>
 					</div>
 					<div class="sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-2 sf-grid__column-md-8 sf-grid__offset-lg-2 sf-grid__column-lg-8 sf-grid__offset-xlg-2 sf-grid__column-xlg-8">
